:sparkles: Use system ColorPicker and create a Pallette

--- a/src/u-color-picker.vue/index.html
+++ b/src/u-color-picker.vue/index.html
@@ -1,3 +1,8 @@
+
+    <!-- <span :class="$style.color" :style="{ backgroundColor: color }"></span> -->
 <div :class="$style.root">
-    <div :class="$style.color" :style="{ backgroundColor: color }">&nbsp;</div>
+    <div :class="$style.wrapper">
+        <input type="color" :class="$style.color" :value="color_" @change="onChange">
+    </div>
+    <!-- <span>{{ color_ }}</span> -->
 </div>
