:sparkles: Add <u-linear-layout>, <u-capsules>; Upgrade dependencies

--- a/src/u-titlebar.vue/index.html
+++ b/src/u-titlebar.vue/index.html
@@ -1,4 +1,6 @@
 <div :class="$style.root">
     <div :class="$style.title">{{ title }}</div>
-    <slot />
+    <div :class="$style.body">
+        <slot></slot>
+    </div>
 </div>
