--- a/src/u-tab-view.vue/index.html
+++ b/src/u-tab-view.vue/index.html
@@ -1,13 +1,13 @@
 <div :class="$style.root" :disabled="disabled">
     <ul :class="$style.head">
         <li :class="$style.item"
-            v-for="(tab, index) in tabs"
-            :title="tab.title"
-            :selected="selectedIndex_ === index"
-            :disabled="tab.disabled"
-            v-show="!tab.hidden"
+            v-for="(tabVM, index) in itemVMs"
+            :title="tabVM.title"
+            :selected="router ? tabVM.active : currentIndex === index"
+            :disabled="tabVM.disabled || disabled"
+            v-show="!tabVM.hidden"
             @click="select(index)">
-            <div :class="$style.close" @click.stop="remove(tab)"></div> {{ tab.title }}
+            <div :class="$style.close" @click.stop="remove(tabVM)"></div> {{ tabVM.title }}
         </li>
     </ul>
     <div :class="$style.body">
