--- a/src/u-collapse-item.vue/index.html
+++ b/src/u-collapse-item.vue/index.html
@@ -1,5 +1,8 @@
 <div :class="$style.root" :expanded="currentExpanded">
-    <div :class="$style.head" @click="toggle()" :expanded="currentExpanded">{{ title }}</div>
+    <div :class="$style.head" @click="toggle()" :expanded="currentExpanded">
+        {{ title }}
+        <span :class="$style.extra"><slot name="extra"></slot></span>
+    </div>
     <div :class="$style.body" v-show="currentExpanded">
         <slot></slot>
     </div>
