--- a/src/u-collapse-item.vue/index.html
+++ b/src/u-collapse-item.vue/index.html
@@ -1,6 +1,6 @@
 <div :class="$style.root" :expanded="currentExpanded">
     <div :class="$style.head" @click="toggle()" :expanded="currentExpanded">
-        {{ title }}
+        <span>{{ title }}</span>
         <span :class="$style.extra"><slot name="extra"></slot></span>
     </div>
     <div :class="$style.body" v-show="currentExpanded">
