--- a/src/u-pallette.vue/index.html
+++ b/src/u-pallette.vue/index.html
@@ -1,7 +1,7 @@
 <div :class="$style.root">
     <u-dragger :disabled="readonly || disabled" :transfer="handleEl" immediate
         range="offset-parent" range-mode="center"
-        @dragstart="onDragStart($event)"
+        @dragstart="onDrag($event)"
         @drag="onDrag($event)">
         <div :class="$style.sv" :style="{ background: hueColor.toRGB() }">
             <div ref="handle" :class="$style.handle"></div>
@@ -10,21 +10,34 @@
     <div :class="$style.bar">
         <div :class="$style.dropper"></div>
         <div :class="$style.sliders">
-            <u-pallette-slider :min="0" :max="255" :value="color.h" @input="setHue($event)"
+            <u-pallette-slider :min="0" :max="360" :value="color.h" @input="setHue($event), onInput()"
                 :style="{ background: `linear-gradient(to right, red 0,#ff0 17%,#0f0 33%,#0ff 50%,#00f 67%,#f0f 83%,red)` }"
             ></u-pallette-slider>
-            <u-pallette-slider v-model="color.a" :min="0" :max="1" :step="0.01" :precision="2"
+            <u-pallette-slider :min="0" :max="1" :step="0.01" :fixed="2" v-model="color.a" @input="onInput()"
                 :style="{ background: `linear-gradient(to right, ${`rgba(${color.r}, ${color.g}, ${color.b}, 0)` }, ${color.toRGB()})` }"
             ></u-pallette-slider>
         </div>
         <div :class="$style.result" :style="{ backgroundColor: color.toRGBA() }"></div>
-        {{ color.toRGBA() }}
     </div>
     <div :class="$style.inputs">
-        <u-label title="Hex"><u-input :class="$style.input" role="hex"></u-input></u-label>
-        <u-label title="R"><u-number-input :class="$style.input" v-model="color.r" :min="0" :max="255"></u-number-input></u-label>
-        <u-label title="G"><u-number-input :class="$style.input" v-model="color.g" :min="0" :max="255"></u-number-input></u-label>
-        <u-label title="B"><u-number-input :class="$style.input" v-model="color.b" :min="0" :max="255"></u-number-input></u-label>
-        <u-label title="A"><u-number-input :class="$style.input" v-model="color.a" :min="0" :max="1" :step="0.1"></u-number-input></u-label>
+        <u-label title="Hex"><u-input :class="$style.input" role="hex" :value="color.toHEX()" @input="setHEX($event), onInput()"></u-input></u-label>
+        <u-label title="R">
+            <u-number-input :class="$style.input" :min="0" :max="255"
+                :value="color.r" @input="color.setRGB($event, color.g, color.b), onInput()"
+            ></u-number-input>
+        </u-label>
+        <u-label title="G">
+            <u-number-input :class="$style.input" :min="0" :max="255"
+                :value="color.g" @input="color.setRGB(color.r, $event, color.b), onInput()"
+            ></u-number-input>
+        </u-label>
+        <u-label title="B">
+            <u-number-input :class="$style.input" :min="0" :max="255"
+                :value="color.b" @input="color.setRGB(color.r, color.g, $event), onInput()"
+            ></u-number-input>
+        </u-label>
+        <u-label title="A">
+            <u-number-input :class="$style.input" :min="0" :max="1" :step="0.1" v-model="color.a" @input="onInput()"></u-number-input>
+        </u-label>
     </div>
 </div>
