--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-<meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="docs.css">
-<link rel="stylesheet" type="text/css" href="atom-one-light.css">
+    <meta charset="UTF-8">
+    <title>组件库</title>
+    <base href="/">
 </head>
 <body>
-<article server-rendered="true" class="u-article"><h1>Vusion Mac Style</h1> <ul><li><a href="u-button.html">&lt;u-button&gt;</a></li><li><a href="u-list-view.html">&lt;u-list-view&gt;</a></li><li><a href="u-tab-view.html">&lt;u-tab-view&gt;</a></li><li><a href="u-tabs.html">&lt;u-tabs&gt;</a></li></ul></article>
-</body>
+    <div id="app">
+        <router-view></router-view>
+    </div>
+<script type="text/javascript" src="docs.js"></script></body>
 </html>
