:bug: Fix color-picker position

--- a/src/u-color-picker.vue/index.html
+++ b/src/u-color-picker.vue/index.html
@@ -1,5 +1,5 @@
 
-<u-popover trigger="click" content="内容" placement="top-start">
+<u-popover>
     <span :class="$style.root">
         <span :class="$style.color" :style="{ backgroundColor: currentValue }"></span>
     </span>
